<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:id="@+id/img_icon"
        android:background="@drawable/circle_background"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:clipToOutline="true"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_icon"
        android:id="@+id/hello_text"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_text"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        android:id="@+id/form_layout"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_btn"
            android:layout_height="64dp"
            android:text="@string/login"
            android:layout_marginTop="12dp"
            android:paddingVertical="12dp"
            android:textSize="16sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noaccount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/Sign_Up_text_view_btn"
            android:text="@string/SignUp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>