<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    android:padding="16dp"
    tools:context=".NoteDetailsActivity">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:id="@+id/title_bar_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:text="@string/addnote"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

          <ImageButton
              android:layout_width="48dp"
              android:layout_height="48dp"
              android:id="@+id/save_note_btn"
              android:src="@drawable/check_solid"
              android:layout_alignParentEnd="true"
              android:layout_centerVertical="true"
              app:tint="@color/black"
              android:contentDescription="save_note"
              android:background="?attr/selectableItemBackgroundBorderless"
              />
      </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner"
        >
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/notes_title_text"
    android:hint="@string/title"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginVertical="8dp"
    android:padding="12dp"
    android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_content_text"
            android:hint="@string/content"
            android:minLines="15"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black" />





    </LinearLayout>



</RelativeLayout>